--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
-<body bgcolor=Black>
+<body bgcolor=GREEN>
 <center>
-<h2><font color=yellow>Hello from ADV-IT</font></h2>
+<h2><font color=yellow>Hello from ADV-IT HI ERZHAN</font></h2>
 
 <font color=blue>www.adv-it.net</font>
 
