--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <body bgcolor=Black>
 <center>
-<h2><font color=yellow>Hello from ADV-IT HI ERZHAN my project </font></h2>
+<h2><font color=yellow>Hello ERZHAN my project </font></h2>
 
-<font color=blue>www.adv-it.net</font>
+<font color=blue>www.test.kz</font>
 
 </center>
 </body>
